Bug 312000 - XPCOM impl of nsICategoryManager doesn't obey the IDL comments, r=darin